fix vertical alignment of unsub form button

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -50,3 +50,7 @@ strong {
     text-align: center;
     margin: 40px auto 30px auto;
 }
+
+#channel-list form {
+    margin:auto
+}
